# routes/routes.go
@@ -16,8 +16,15 @@ func RegisterRoutes(r *gin.Engine) {
 		quiz.Use(middleware.AuthMiddleware())
 		{
 			quiz.GET("/questions", controllers.GetQuestions)
+			quiz.GET("/random", controllers.GetRandomQuestionSet)
 			quiz.POST("/submit", controllers.SubmitAnswers)
 			quiz.GET("/leaderboard", controllers.GetLeaderboard)
+
+			admin := quiz.Group("")
+			admin.Use(middleware.AdminMiddleware())
+			{
+				admin.POST("/questions", controllers.CreateQuestion)
+			}
 		}
 	}
 }
